Description Feature implementation
Mobile version of the description feature implementation

--- a/features/levelingBar.html
+++ b/features/levelingBar.html
@@ -61,6 +61,6 @@
         </div>
     </div>
 </body>
-<script src="C:\Users\Anthony\Desktop\web_dev_projects\profilePage\levelingBar.js"></script>
+<script src="levelingBar.js"></script>
 
 </html>
