Finished the Footer
Design for footer has been completed

--- a/index.html
+++ b/index.html
@@ -6,30 +6,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="index.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 
 <body>
-    <div class="interact">
+    <div id="grid-wrapper">
+        <div id="lander-wrapper">
+            <img id="img-rick-fall" src="https://orig12.deviantart.net/94ff/f/2015/281/d/e/rick_render_by_oldandnewshowsforevs-d9cf59s.png" alt="rick falling">
+            <img src="showMeWhatYouGot.png" alt="show me what you got">
+            <img id="img-cromulon" src="http://i.imgur.com/jBwJzeu.png" alt="cromulon">
+        </div>
+        <div id="projects"></div>
+        <div id="personal-progress">
 
-    </div>
-    <div class="space-checking">
+        </div>
+        <div id="idea-gen">
+            <div id="author-info">
 
-    </div>
-    <div class="wrapper">
-        <div class="one">
+            </div>
         </div>
-        <div class="one-1">
-        </div>
-        <div class="one-2">
-            <button id="hire" class="nav-btn" type="" alt="Developer For Hire">For Hire</button>
-            <button id="projects" class="nav-btn" type="" alt="Developer Projects">Projects</button>
-            <button id="blog" class="nav-btn" type="" alt="Developer Blog">Blog</button>
-        </div>
-        <div class="two"></div>
-        <div class="three"></div>
-        <div class="four"></div>
-        <div class="five"></div>
     </div>
 </body>
+
+<footer>
+    <div id="footer">
+        <div id="footer-left-padding"></div>
+        <img id="img-jerry-portal" src="https://68.media.tumblr.com/871682ca7c79a1c01ff0e438359584e5/tumblr_olf6jjToqx1w3z1eko2_r1_500.png" alt="jerry walking out of portal">
+        <img id="img-portal-shot" src="https://i.redd.it/3h3rcc8229jx.png" alt="portal-shot-schematics">
+
+        <div id="social-media">
+            <div id="contact-name">
+                CONTACT ME
+            </div>
+            <div id="contact-info">
+                <div id="phone-number">
+                    0161 707 0889
+                </div>
+                <div id="email-info">
+                    anthonytran.dev@gmail.com
+                </div>
+                <div id="address">
+                    <ul>
+                        <li>10 Bindloss Avenue</li>
+                        <li>Eccles Manchester</li>
+                        <li>M30 0DU</li>
+                    </ul>
+                </div>
+            </div>
+            <div id="social-name">
+                SOCIAL STUFF
+            </div>
+            <div id="social-icons">
+                <img id="github-icon" class="social-media-icon" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/github-128.png" alt="github icon">
+                <img id="twitter-icon" class="social-media-icon" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/twitter-128.png" alt="twitter icon">
+                <img id="linkedIn-icon" class="social-media-icon" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/linkedin-128.png" alt="linked-in icon">
+                <img id="quora-icon" class="social-media-icon" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/quora-128.png" alt="quora icon">
+                <img id="email-icon" class="social-media-icon" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/mail-128.png" alt="email icon">
+            </div>
+            <div id="event-name">
+                EVENTS VISITED
+            </div>
+            <div id="event-icons">
+                <div id="icon-centralise">
+                    <img id="instagram-icon" class="social-media-icon" src="https://cdn1.iconfinder.com/data/icons/smallicons-logotypes/32/instagram-128.png" alt="instagram icon">
+                    <img id="location-events-icon" class="social-media-icon" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/location-128.png" alt="location events visited icon">
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </html>
