Completed Parallax Effect Lander

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
 <body>
     <div id="grid-wrapper">
-        <div id="lander-wrapper">
+        <div id="lander-wrapper" class="parallax">
             <img id="img-rick-fall" src="https://orig12.deviantart.net/94ff/f/2015/281/d/e/rick_render_by_oldandnewshowsforevs-d9cf59s.png" alt="rick falling">
-            <img src="showMeWhatYouGot.png" alt="show me what you got">
+            <img id="title-show-me-what-you-got" src="showMeWhatYouGot.png" alt="show me what you got">
             <img id="img-cromulon" src="http://i.imgur.com/jBwJzeu.png" alt="cromulon">
         </div>
-        <div id="projects"></div>
+        <div id="projects">
+            <div id="project-title">Projects</div>
+        </div>
         <div id="personal-progress">
 
         </div>
@@ -75,5 +77,6 @@
         </div>
     </div>
 </footer>
+<script src="index.js"></script>
 
 </html>
