Initial Project Layout Interface

--- a/index.html
+++ b/index.html
@@ -19,13 +19,51 @@
         </div>
         <div id="projects">
             <div id="project-title">Projects</div>
+            <div id="solo-projects">
+                <div id="solo-player">
+                    <div class="bg-oval">
+                        <img id="img-morty-solo" src="https://vignette.wikia.nocookie.net/vsbattles/images/6/69/PM-001.png/revision/latest?cb=20161127203807" alt="morty solo">
+                    </div>
+                </div>
+                <div id="solo-title">Solo Mode</div>
+                <div id="solo-description">
+                    Grandpa Ricks' Toolbox Place info as in tags of technologies learnt the past month, or couple or so.
+                </div>
+                <div id="project-box-1" class="project-box">
+                    <div class="project-show-1">
+                        <div class="darken"></div>
+                        <img id="google-calculator-clone" src="javascript_calculator.png" alt="JavaScript Calcultor Web App">
+                    </div>
+                    <div class="project-show-2">
+                        <img id="google-calculator-clone" src="pomodoro_clock.png" alt="JavaScript Calcultor Web App">
+                    </div>
+                    <div class="project-show-3"></div>
+                    <div class="project-show-4"></div>
+                </div>
+                <div id="coop-player">
+                    <div class="bg-oval">
+                        <img id="img-rick-and-morty" src="http://www.pngmart.com/files/3/Rick-And-Morty-Transparent-PNG.png" alt="rick and morty coop">
+                    </div>
+                </div>
+                <div id="coop-title">Co-op Mode</div>
+                <div id="coop-description">
+                    Explain, with a short sentence the meaning behind solo and coop mode. For non-gamers Place info as in tags of technologies learnt the past month, or couple or so.
+                </div>
+                <div id="project-box-2" class="project-box">
+                    <div class="project-show-1"></div>
+                    <div class="project-show-2"></div>
+                    <div class="project-show-3"></div>
+                    <div class="project-show-4"></div>
+                </div>
+            </div>
         </div>
         <div id="personal-progress">
 
         </div>
         <div id="idea-gen">
             <div id="author-info">
-
+                <!-- https://vignette.wikia.nocookie.net/vsbattles/images/6/69/PM-001.png/revision/latest?cb=20161127203807 -->
+                <!-- http://static.tumblr.com/0b986bdb046162707c3d749984aade43/oz9xbsu/8FWntx58x/tumblr_static_706t84v0234ss4w0gwocgo44g.png -->
             </div>
         </div>
     </div>
