Successfully completed slideOutPanel animation
Managed to complete the Fallout Terminal cursor and typing animation

--- a/features/interactiveGraph.html
+++ b/features/interactiveGraph.html
@@ -18,7 +18,7 @@
                 <canvas id="canvas3" style="position: absolute;" width="630.5" height="406"></canvas>
                 <canvas id="canvas4" style="position: absolute;" width="630.5" height="406"></canvas>
                 <canvas id="canvas5" style="position: absolute;" width="630.5" height="406"></canvas>
-                <!-- <div id="img-serum" class="img-circle-items-border">
+                <div id="img-serum" class="img-circle-items-border">
                     <div class="img-circle-items">
                         <img id="icon-serum" class="icon" src="https://vignette.wikia.nocookie.net/rickandmorty/images/a/a3/Serum.png/revision/latest?cb=20160909154149" alt="serum">
                     </div>
@@ -38,7 +38,7 @@
                     <div class="img-circle-items">
                         <img id="icon-time-crystal" class="icon" src="https://vignette.wikia.nocookie.net/rickandmorty/images/c/c0/Time_Crystal.png/revision/latest/scale-to-width-down/150?cb=20160910011054" alt="time-crystal">
                     </div>
-                </div> -->
+                </div>
                 <div id="shape-4">
                 </div>
                 <div id="shape-3">
