Terminal Template Complete
First time used Promises for an async process; whilst creating elements, you can use promises as a sort of event listener. So when all the elements are created, you then start styling them with a promise

--- a/experimentation/slideOutPanel.html
+++ b/experimentation/slideOutPanel.html
@@ -14,18 +14,30 @@
             <div id="initial-panel"></div>
             <div id="slide-panel">
 
+                <!-- Copied v -->
+                <!-- exception v -->
                 <div id="coverup">
-                    <div>
-                        <div id="underneath">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                        </div>
+                    <!-- exception ^ -->
+                    <div id="terminal-line-1" class="underneath">
+                        <div> CITADEL OF RICKS UNIFIED OPERATING SYSTEM</div>
                     </div>
-                    <div id="underneath-2">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+
+                    <div id="terminal-line-2" class="underneath">
+                        COPYRIGHT 2017 ANTCO INDUSTRIES
+                    </div>
+                    <div id="terminal-line-3" class="underneath">
+                        -Server 23-
+                    </div>
+                    <div id="terminal-line-4" class="underneath">
+                        Spinning Fields Control Network
+                    </div>
+                    <div id="terminal-line-5" class="underneath">
+                        _______________________________
                     </div>
                     <div id="cursor" class="blinking"></div>
                 </div>
                 <div id="cursor-2" class="blinking2"></div>
+                <!-- Copied ^ -->
             </div>
         </div>
     </div>
