--- a/index.html
+++ b/index.html
@@ -53,15 +53,19 @@
                     </div>
                 </div>
                 <div id="project-box-1" class="project-box">
-                    <button class="project-show-1">
-                        <div class="darken"></div>
+                    <button id="project-show-1">
                         <img id="google-calculator-clone" src="javascript_calculator.png" alt="JavaScript Calcultor Web App">
                     </button>
-                    <div class="project-show-2">
+
+                    <div id="project-show-2">
                         <img id="google-calculator-clone" src="pomodoro_clock.png" alt="JavaScript Calcultor Web App">
                     </div>
-                    <div class="project-show-3"></div>
-                    <div class="project-show-4"></div>
+                    <div id="project-show-3"></div>
+                    <div id="panel-slide-out-1">
+                        <div id="cursor" class="blinking"></div>
+                        <div id="cursor-2" class="blinking2"></div>
+                    </div>
+                    <div id="project-show-4"></div>
                 </div>
                 <div id="coop-player">
                     <div class="bg-oval">
@@ -103,10 +107,10 @@
                     </div>
                 </div>
                 <div id="project-box-2" class="project-box">
-                    <div class="project-show-1"></div>
-                    <div class="project-show-2"></div>
-                    <div class="project-show-3"></div>
-                    <div class="project-show-4"></div>
+                    <div id="project-show-1"></div>
+                    <div id="project-show-2"></div>
+                    <div id="project-show-3"></div>
+                    <div id="project-show-4"></div>
                 </div>
             </div>
         </div>
