Integrated Sliding Feature with Terminal Template

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     </div>
                     <div id="project-show-3"></div>
                     <div id="panel-slide-out-1">
-                        <div id="cursor" class="blinking"></div>
-                        <div id="cursor-2" class="blinking2"></div>
+                        <div id="panel-content"></div>
                     </div>
+                    <!-- <div id="cursor-2" class="blinking2"></div> -->
                     <div id="project-show-4"></div>
                 </div>
                 <div id="coop-player">
