Feature Intergration: Graph Finished

--- a/index.html
+++ b/index.html
@@ -136,16 +136,48 @@
                 <div id="progress-dates">
                     <div id="progress-box">
                         <div id="scroll-box">
-                            <div id="progress-update-1" class="progress-update"></div>
-                            <div id="progress-update-2" class="progress-update"></div>
-                            <div id="progress-update-3" class="progress-update"></div>
+                            <div id="progress-update-1" class="progress-update">
+                                <div class="progress-date">[ August - September ]</div>
+                                <div class="initial-description">
+                                    <b>Week 17</b> - Using TDD to build a Google Calculator Clone. Learnt more about the underlying app logic from breaking tests. Then solely relying on console.log().
+                                </div>
+                                <div class="final-description">
+                                    <b>Week 20</b> - Currently confident enough to join other devs on their group projects. Realised that reading code, is the hardest part of being a dev.
+                                </div>
+                            </div>
+                            <div id="progress-update-2" class="progress-update">
+                                <div class="progress-date">[ June - July ]</div>
+                                <div class="initial-description">
+                                    <b>Week 9</b> - Clavicle was fitted a titanium plate; delays due to the Manchester Bombings. Make better use of git.
+                                </div>
+                                <div class="final-description">
+                                    <b>Week 14</b> - Investing time into React + Redux, with it a plethora of new concepts, changing states and props. Added bonus, boosts my understanding, OOP side of JS.
+                                </div>
+                            </div>
+                            <div id="progress-update-3" class="progress-update">
+                                <div class="progress-date">[ April - May ]</div>
+                                <div class="initial-description">
+                                    <b>Week 1</b> - Decided to spend time on completing katas on CodeWars, as I want to get to grips with language fundamentals, as soon as I can
+                                </div>
+                                <div class="final-description">
+                                    <b>Week 6</b> - Traffic Accident, cracked left-clavicle. In the meantime, shifted my focus on utilizing APIs, fascinated on different ways you can mash-up data.
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="idea-gen">
+        <div id="idea-gen" class="parallax">
             <div id="author-info">
+                <div id="author-img">
+                    <div id="author-img-ring">
+
+                    </div>
+                </div>
+                <div id="author-abstract">
+                    <div id="author-content"></div>
+                </div>
                 <!-- https://vignette.wikia.nocookie.net/vsbattles/images/6/69/PM-001.png/revision/latest?cb=20161127203807 -->
                 <!-- http://static.tumblr.com/0b986bdb046162707c3d749984aade43/oz9xbsu/8FWntx58x/tumblr_static_706t84v0234ss4w0gwocgo44g.png -->
             </div>
