Feature Integration: Initial start integrating progress bar

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                 <!-- http://static.tumblr.com/0b986bdb046162707c3d749984aade43/oz9xbsu/8FWntx58x/tumblr_static_706t84v0234ss4w0gwocgo44g.png -->
             </div>
         </div>
+
     </div>
 </body>
 
@@ -227,6 +228,43 @@
                     <img id="instagram-icon" class="social-media-icon" src="https://cdn1.iconfinder.com/data/icons/smallicons-logotypes/32/instagram-128.png" alt="instagram icon">
                     <img id="location-events-icon" class="social-media-icon" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/location-128.png" alt="location events visited icon">
                 </div>
+            </div>
+        </div>
+    </div>
+    <div id="slide-in-level-bar">
+        <div id="fade-box">
+            <div id="label">
+                <div id="morty-name">One True Morty</div>
+                <div id="morty-level">Level: 0</div>
+            </div>
+            <div id="progress-container">
+                <div id="progress-bar">
+                    <div id="progress-fill">
+                        <div class="progress-circle">
+                            <div id="ball-1"></div>
+                        </div>
+                        <div class="progress-circle">
+                            <div id="ball-2"></div>
+                        </div>
+                        <div class="progress-circle">
+                            <div id="ball-3"></div>
+                        </div>
+                        <div class="progress-circle">
+                            <div id="ball-4"></div>
+                        </div>
+                        <div id="progress-bar-2"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="arrow-box-contain">
+        <img id="bullet-point-3" class="arrow-bullet-point" src="https://cdn2.iconfinder.com/data/icons/bullet-points-1/64/Bulletpoint_Bullet_Listicon_Shape_Bulletfont_Glyph_Typography_Bullet_Point_Customshape_Wingding_Custom_Right_Direction_Arrow-64.png" alt="arrow-bullet-point">
+    </div>
+    <div id="icon-morty-wrapper">
+        <div id="img-border">
+            <div id="img-circle">
+                <img id="img-average-morty" src="https://vignette.wikia.nocookie.net/rickandmorty/images/1/18/PM001.png/revision/latest/scale-to-width-down/50?cb=20160117042528" alt="Average Morty">
             </div>
         </div>
     </div>
